Valueof update
changed new Integer and new Double  into valueOf